# starfield-resources

./: README.md
.github/workflows/: build.yaml
api/: .gitignore  Dockerfile  pyproject.toml
api/api/: models.py  serializers.py  settings.py  urls.py  views.py
api/api/migrations/: 0001_initial.py
api/requests/: starfield_resources.http
api/starfield_resources/: asgi.py  settings.py  urls.py  wsgi.py
backend/: .gitignore  Dockerfile  manage.py  pyproject.toml
backend/api/: models.py  serializers.py  urls.py
backend/api/migrations/: 0001_initial.py
backend/client/: auth.py  models.py  starfield_resources.py
backend/data/: inorganic.py  load_data.py  post_data.py  stars.py
backend/requests/: starfield_resources.http
backend/starfield_resources/: settings.py  urls.py  views.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  data.ts
frontend/src/api/: api.ts  base.ts  common.ts  configuration.ts  index.ts
