[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Code-Apprentice <codeguru42@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = "^4.2.6"
djangorestframework = "^3.14.0"
pyyaml = "^6.0.1"
uritemplate = "^4.1.1"
envparse = "^0.2.0"
django-cors-headers = "^4.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pandas = "^2.1.1"
typer = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
